some first test routes and json server side responses serving instagram content

--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -1,1 +1,7 @@
 hello home.html
+
+<a href="#/nearby">Search around here</a>
+<br>
+
+Search around <input ng-model="term" />
+<button tabindex="0" ng-click="go('/search')">Go</button>
