a tad bit of refactoring the location search on, bachend api / ng resource simplified

--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -1,6 +1,6 @@
 hello home.html
 
-<a href="#/nearby">Search around here</a>
+<a href="#/here">Search around here</a>
 <br>
 
 Search around <input ng-model="term" />
