--- a/static/partials/locations.html
+++ b/static/partials/locations.html
@@ -1,5 +1,10 @@
 template: locations.html
 
+        #/{{ uriPart }}/food
+        <ul>
+            <li><a href="#/{{ uriPart }}/explore/food">food</a></li>
+        </ul>
+
 <p ng-repeat="location in locations">
     <a href="#/location/{{ location.id }}">
         <span>{{ location.name }}</span>
