default missing category to all defined categories, limit venues result list to found (0) venues if under max

--- a/static/partials/home.html
+++ b/static/partials/home.html
@@ -3,5 +3,4 @@ hello home.html
 <a href="#/here">Search around here</a>
 <br>
 
-Search around <input ng-model="term" />
-<button tabindex="0" ng-click="go('/search')">Go</button>
+Search around <input ng-model="term" ng-enter="go('/search')" />
